--- a/.github/workflows/tutorial.yml
+++ b/.github/workflows/tutorial.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: step1
-        run: echo "Hello from job1"
+        run: echo "Todays date is $(date) "
 
   job2:
     name: job2
@@ -21,3 +21,4 @@ jobs:
     steps:
       - name: step 3
         run: echo "hello from job 3"
+    
