--- a/.github/workflows/python-clean_data.yml
+++ b/.github/workflows/python-clean_data.yml
@@ -1,11 +1,16 @@
-name: CI
-on:
-  workflow_dispatch
+name: pythonworkflow
+on: workflow_dispatch
 jobs:
-  job1:
+  data_pipeline:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
       - uses: actions/checkout@v4
+      - name: clean_data 
       - run: |
-          echo ${{ github.workspace}}
-          echo $GITHUB_WORKSPACE
+          pwd
+          ls -al
+          pwd
+          cd ModelCleaning
+          pip install pandas
+          python cleandata.py
