--- a/.github/workflows/python-clean_data.yml
+++ b/.github/workflows/python-clean_data.yml
@@ -5,16 +5,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
 
       - name: set up python 3.10
-      - uses: actions/setup-python@v4
-      - with:
-         python-version: 3.10
+        uses: actions/setup-python@v4
+        with:
+         python-version: '3.10'
+         
       - name: clean_data 
-      - run: |
+        run: |
           python cleandata.py
+          
       - name: Train and test model
-      - run: |
+        run: |
           python train_and_test.py
      
